--- a/story.html
+++ b/story.html
@@ -12,7 +12,7 @@
 	
 	<header>
 		<div class="headerText">
-			<h2 class="header1"><u>Explore</u></h2>
+			<h2 class="header1"><u>explore</u></h2>
 			<h1 class="header2">Trust : Impact Investing Reimagined</h1>
 			<h2 class="header3"><u>Log In</u></h2>
 		</div>
