location and cause on project thumbnail

--- a/index.html
+++ b/index.html
@@ -286,6 +286,10 @@
 				<div class="projectsSection row">
 					<div class="thumbnail">
 						<img class="img-thumbnail" src="DSC_0115.jpg" >
+						<div class="locationCause row">
+							<div class="col-6"><p style="float:left">Cause</p></div>
+							<div class="col-6"><p style="float:right">Location</p></div>
+						</div>
 					</div>
 					<div class="projectDetails">
 						<h2 class="hInProjectSect">Stay Connected</h2>
@@ -336,6 +340,10 @@
 					<div class="projectThumbnail">
 						<div class="thumbnail w3-container">
 							<img class="img-thumbnail" src="DSC_0126_.jpg" >
+							<div class="locationCause row">
+								<div class="col-6"><p style="float:left">Cause</p></div>
+								<div class="col-6"><p style="float:right">Location</p></div>
+							</div>
 						</div>
 					</div>
 					<div class="projectDetails">
@@ -387,6 +395,10 @@
 					<div class="projectThumbnail">
 						<div class="thumbnail">
 							<img class="img-thumbnail" src="DSC_0133__.jpg" >
+							<div class="locationCause row">
+								<div class="col-6"><p style="float:left">Cause</p></div>
+								<div class="col-6"><p style="float:right">Location</p></div>
+							</div>
 						</div>
 					</div>
 					<div class="projectDetails">
@@ -438,6 +450,10 @@
 					<div class="projectThumbnail">
 						<div class="thumbnail">
 							<img class="img-thumbnail" src="DSC_0115.jpg" >
+							<div class="locationCause row">
+								<div class="col-6"><p style="float:left">Cause</p></div>
+								<div class="col-6"><p style="float:right">Location</p></div>
+							</div>
 						</div>
 					</div>
 					<div class="projectDetails">
